--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -403,8 +403,9 @@ CMMI模型的5个成熟度级别分别为：
 
 
 
-
 ### 软件架构风格
+
+架构风格：是描述特定应用领域中软件系统组织方式和惯用方式。
 
 #### 1.层次架构风格 
 
@@ -416,7 +417,7 @@ CMMI模型的5个成熟度级别分别为：
 
 #### 3.面向对象
 
-可以通过减少功能调用层次提高系统性能
+面向对象是将：数据表示和数据操作封装在对象中，这种模式的构件是对象，对象维护自身的完整性格，对象之间通过消息机制进行通信，对象交互时需要知道彼此的表示，通过对象之间的写作完成计算过程。可以通过减少功能调用层次提高系统性能
 
 #### 4.过程调用
 
@@ -431,6 +432,10 @@ CMMI模型的5个成熟度级别分别为：
 虚拟机风格：解释器、基于规则的系统
 
 仓库风格：数据库系统、超文本系统、黑板系统
+
+#### 6.控制环路
+
+
 
 
 
