--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1444,3 +1444,27 @@ mongo:
 
 
 
+### 11.软件架构复用
+
+软件架构复用包括：机会复用和系统复用
+
+### 12.数据管理：
+
+数据战略、数据治理、数据架构、数据标准、数据质量、数据安全、数据应用和数据生存周期。
+
+### 13.软件横向重用
+
+指重用不同应用领域中的软件元素，例如数据结构、分类算法、人机界面构件等。通用算法库也是一种横向重用。
+
+
+
+复用性构件：
+
+- 可用性 构件必须易于理解和正确使用
+- 质量  构件及其变形必须能正确工作
+- 适应性 构件应易于通过参数化等方式在不同语境中进行配置
+- 可移植性 构件应该能在不同的硬平台和软件环境中运行
+- 可变性 构件应能针对不同的应用系统只需对其可变部分进行适当调节
+
+
+
