--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1466,5 +1466,17 @@ mongo:
 - 可移植性 构件应该能在不同的硬平台和软件环境中运行
 - 可变性 构件应能针对不同的应用系统只需对其可变部分进行适当调节
 
+### 14.软件质量属性
+
+1. 在线交易必须在1s内完成客户交易请求。该要求主要对应性能，可采用的架构设计策略有：增加计算资源、改善资源需求、资源管理（并发、数据复制等）和资源调度（先进先出、优先级队列等）
+
+2. 该平台必须严格保证客户个人信息和交易信息的保密和安全性。可以采用的架构设计策略有：抵御攻击（授权、认证和限制资源访问）、攻击检测（入侵检测等）、从攻击中恢复（部分可用性策略）和信息审计等。
+3. 可用性：ping/echo、心跳、异常和主动冗余
+4. 可修改性：软件模块泛化、限制模块之间的通讯、使用中介和延迟绑定。
 
 
+
+- 系统性能需求：指响应时间、吞吐量、准确性、有效性、资源利用率等与系统完成任务效率相关的指标。可靠性、可用性等指标归为此类。
+- 安全性需求：系统向合法用户提供服务并阻止非授权用户使用服务方面的需求。
+- 操作性需求：与用户操作使用系统相关的一些需求
+- 文化需求：带有文化背景因素的系统需求。
