--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1026,15 +1026,12 @@ IPSEC 是IP层安全传输层技术
 
     获取途径多：
 
-<<<<<<< HEAD
-  
-=======
+ 
+ 
 ​	9.企业信息化：涉及对企业管理理念的创新，管理流程化，管理团队的重组和管理手段的革新。管理创新是按照市场发展的要求，对企业现有流程进行重新整合，作为管理核心的财务、物料管理，转向技术、物资、人力资源管理，并延申到企业技术创新、工艺设计、产品设计、生产制造的管理、还要扩展到客户关系管理、供应链管理乃至发展到电子商务。
 
 
-
-
->>>>>>> 9bace50a4097b34c514355aa4893d507913fd396
+ 
 
 ## 软件工程
 
@@ -1331,7 +1328,8 @@ SDN　网络架构中包括：
 
 
 
-
+测试精确度：
+真实程序》 核心程序》 小型基准程序》 合成基准程序
 
 
 ## 系统安全性和保密性设计
