--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1331,6 +1331,11 @@ SDN　网络架构中包括：
 测试精确度：
 真实程序》 核心程序》 小型基准程序》 合成基准程序
 
+系统监控：
+- 通过系统本身命令
+- 通过系统记录文件查阅系统在特定时间的状态
+- 集成命令、文件记录和可视化的监控工具
+
 
 ## 系统安全性和保密性设计
 
