--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -780,6 +780,13 @@ SQL注入的主要防范措施：
    - 微控制器 MCU 代表是单片机，是指大规模集成电路的出现和发展，讲计算机的cpu、ram、rom、定时计数器和多种IO接口集成在一片芯片上星辰芯片级别的计算机为不同的应用做不同的组合
    - 数字信号处理器 DSP  对系统和结构和指令集进行了特殊设计，适合数字处理
    - soc 系统级别的芯片 是有一个专用目标的集成电路，其中包含完整系统并有嵌入软件的全部内容,是一个系统不仅仅是一个芯片，soc是一个微小型系统，定义为微处理器，模拟IP和，数字IP核，通常客户定制，或是面向特定用途的标准产品。 是一种技术，是以实际的、确定的功能开始，到硬件划分，并完成设计的整个过程。
+  
+嵌入式系统：
+  - 是以应用为中心，以计算机技术为基础，并将配置与可裁剪的软、硬件集成于一体的专用计算机系统，需要满足应用对功能、可靠性、成本、体积和功耗等方面的严格要求。
+  - 从计算机角度看，嵌入式是指嵌入各种设备及应用产品内部的计算机系统。它主要完成信号控制功能，体积小、结构紧凑，可作为一个埋藏于所控制的装置中。
+  - 一般嵌入式系统由嵌入式处理器、相关支撑硬件、嵌入式操作系统、支撑软件以及应用软件组成。
+
+
 
 2. 嵌入式操作系统评价标准
 
