--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -785,10 +785,28 @@ SQL注入的主要防范措施：
   - 是以应用为中心，以计算机技术为基础，并将配置与可裁剪的软、硬件集成于一体的专用计算机系统，需要满足应用对功能、可靠性、成本、体积和功耗等方面的严格要求。
   - 从计算机角度看，嵌入式是指嵌入各种设备及应用产品内部的计算机系统。它主要完成信号控制功能，体积小、结构紧凑，可作为一个埋藏于所控制的装置中。
   - 一般嵌入式系统由嵌入式处理器、相关支撑硬件、嵌入式操作系统、支撑软件以及应用软件组成。
+嵌入式功耗控制：
+- 软硬件协同设计，即软件的设计要与硬件的匹配，考虑硬件因素
+- 编译优化，采用低功耗的编译优化技术
+- 减少系统的持续运行时间，可从算法角度进行优化
+- 利用中断代替查询
+- 进行有效的电源管理
+  
+AI 芯片的特征：
+- 新型的计算范式 ： AI计算既不脱离传统计算也具有新的计算特质
+- 训练和推断：AI系统通常涉及训练和推断过程
+- 大数据处理能力 ：满足高效能机器学习的数据处理要求
+- 数据精度：降低数据精度设计
+- 可重构能力：针对特定领域而不针对特定应用设计，可以重新配置，适应新的AI算法、架构和任务
+- 开发工具：AI 芯片需要软件工具链的支持
 
+人工智能芯片：
+- GPU
+- FPGA
+- ASIC
+- 类脑芯片
 
-
-2. 嵌入式操作系统评价标准
+1. 嵌入式操作系统评价标准
 
    - 系统调用平均运行时间
    - 任务切换时间
@@ -796,11 +814,11 @@ SQL注入的主要防范措施：
    - 信号量混洗时间
    - 中断响应时间
 
-3. 混成系统是嵌入式操作系统的子类，混成系统一般由离散分离组件和连续组件并行或者串行组成，组件之间的行为由计算模型进行行为控制。
+2. 混成系统是嵌入式操作系统的子类，混成系统一般由离散分离组件和连续组件并行或者串行组成，组件之间的行为由计算模型进行行为控制。
 
-4. NDB 
+3. NDB 
 
-5. 板级支持包主要功能是屏蔽硬件，提供操作系统及硬件驱动，具体包括：
+4. 板级支持包主要功能是屏蔽硬件，提供操作系统及硬件驱动，具体包括：
 
    - 单板硬件初始化，主要是由cpu的初始化，为整个软件系统提供底层硬件支持
    - 为操作信息提供设备驱动和系统中断服务程序
