--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -812,7 +812,8 @@ AI 芯片的特征：
    - 任务切换时间
    - 线程切换时间
    - 信号量混洗时间
-   - 中断响应时间
+   - 中断响应时间和延迟时间
+
 
 2. 混成系统是嵌入式操作系统的子类，混成系统一般由离散分离组件和连续组件并行或者串行组成，组件之间的行为由计算模型进行行为控制。
 
