--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -813,6 +813,11 @@ AI 芯片的特征：
    - 线程切换时间
    - 信号量混洗时间
    - 中断响应时间和延迟时间
+嵌入式调度算法：
+ - 优先级调度算法
+ - 抢占式优先级调度算法
+ - 最早截止期调度算法
+ - 最晚截止期调度算法
 
 
 2. 混成系统是嵌入式操作系统的子类，混成系统一般由离散分离组件和连续组件并行或者串行组成，组件之间的行为由计算模型进行行为控制。
