--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -421,6 +421,14 @@ CMMI模型的5个成熟度级别分别为：
 
 #### 3.面向对象
 
+面向对象的分析模型主要由顶层架构图、用例与用例图和领域概念模型构成。
+
+设计模型则包含以包图表示的软件体系结构图、以交互图表示用例实现图、完整精确的类图、描述复杂对象的状态图和用于描述流程化处理过程的活动图等。
+
+
+
+
+
 面向对象是将：数据表示和数据操作封装在对象中，这种模式的构件是对象，对象维护自身的完整性格，对象之间通过消息机制进行通信，对象交互时需要知道彼此的表示，通过对象之间的写作完成计算过程。可以通过减少功能调用层次提高系统性能
 
 #### 4.过程调用
@@ -464,6 +472,16 @@ CMMI模型的5个成熟度级别分别为：
 过程视图 系统集成人员 性能 可扩充、吞吐量  
 
 物理视图： 系统工程人员：系统拓扑、安装图通信等
+
+
+
+利用用例以及用例图表示需求。
+
+利用包图和类图表示软件系统的总体架构。根据领域知识、业务需求描述和既往经验设计目标软件系统的顶层架构；从业务需求描述中提取关键概念，形成领域概念模型；从概念模型和用例出发研究系统中主要的类之间的关系，生成类图。
+
+
+
+
 
 场景归一![image-20240810224501979](images\image-20240810224501979.png)
 
@@ -1271,7 +1289,7 @@ SDN　网络架构中包括：
 
 基准程序法：把应用程序中用的最多，最频繁的那部分核心程序作为评估计算机系统性能的标准程序，称为基准程序法。基准程序不仅考虑到了CPU的性能，还将IO的结构、操作系统、程序编译效率等对系统性能影响的考虑进来，他是一致承认的测试系统性能的较好方法。
 
-
+准确程度：真实程序》 核心程序>小型基准程序>合成基准程序，其评测准确程度依次递减。
 
 
 
@@ -1504,3 +1522,9 @@ https://blog.csdn.net/xcg340123/article/details/138451426
 架构总结
 
 https://blog.csdn.net/qq_43479628/article/details/133359209
+
+
+
+架构之路
+
+https://blog.csdn.net/hiwangwenbing/category_11994218.html
