--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1040,6 +1040,13 @@ IPSEC 是IP层安全传输层技术
 
 软件过程：
 
+软件过程式制作软件的一组活动，以及结果，这些活动主要是由软件人员来完成，软件活动主要有以下内容。
+
+- 软件描述 ：定义软件的功能，以及使用限制
+- 软件开发：软件的设计和实现，软件工程人员制作出能满足描述的软件
+- 软件有效性验证：软件必须经过严格的验证，以保证能够满足客户的需求。
+- 软件进化：随着客户的需求变化不断改进
+
 
 
 1.软件生命周期：软件定义、软件开发、软件运行和维护
