--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -770,7 +770,28 @@ SQL注入的主要防范措施：
 - 交互支持
 - 提供公共服务
 
+### 32   统一过程（RUP）
 
+将项目管理、业务建模、分析设计等统一起来，贯穿整个开发过程。
+
+9个核心：
+
+- 业务建模  理解待开发系统所在的机构以及商业运作，确保所有参与人员对待开发系统所在的机构有共同的认识，评估待开发系统对所在机构的影响。
+- 需求 ： 定义系统功能及用户界面，式客户知道系统的功能，式开发人员理解系统的需求
+- 分析与设计  把需求分析的结果转化为分析与设计模型
+- 实现 把设计模型转化为实现结果，对开发的代码做单元测试
+- 测试 检查个子系统之间的交互、集成、验证所有需求是否呗正确实现，对发现的软件质量上的缺陷进行归档，对软件质量提出改进建议
+- 部署 打包、分发、安装软件，升级旧系统；培训用户以及销售人员并提供技术支持
+- 配置与变更 跟踪并维护系统开发过程中所产生的所有制品的完整性和一致性
+- 项目管理
+- 环境
+
+4个阶段：
+
+- 初始阶段
+- 细化阶段
+- 构建阶段
+- 移交阶段
 
 
 ### ？31 架构风格
@@ -1120,17 +1141,21 @@ IPSEC 是IP层安全传输层技术
    
    5. 逆向工程 ： 就是分析已有的程序，寻求比源码更高级的抽象表现形势，一般认为凡是在软件生命周期内将某种形势的描述转换成更为抽象的形势的活动都可以称为逆向工程
    
-       抽象层次：
+      抽象层次：
    
       1. 实现级：包括程序抽象语法树、符号表等信息
       2. 结构级别：包括程序分量之间相互依赖关系的信息，调用图，结构图，程序和数据结构
       3. 功能级：包括反映程序段功能及程序段之间的关系，数据和控制模型，程序段和程序段之间的关系
       4. 领域级：包括反应程序分量或者程序诸实体与应用领域之间的对应关系。实体关系模型
 
+      软件工程完备性：
+
+      - ​	 
+
    6. 重组 指在同一抽象级别上转换系统描述形势
-
+   
    7. 设计恢复：  指借助工具从已有程序中抽象出有关数据设计、总体结构设计和过程设计的信息。
-
+   
    8. 重构，修复改造工程，它是在逆向工程所获取的信息的基础上修改或者重构已有的系统产生一个新的版本。
    
    9. 结构化分析：功能建模一般DFD，行为建模-状态转换图，数据建模-ER图
