--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -979,6 +979,21 @@ IPSEC 是IP层安全传输层技术
 
 传输层安全技术包括 ssl、socket、安全rpc
 
+### 网络规划与设计
+- 需求分析 
+  - 业务需求 
+  - 用户需求
+  - 平台需求
+  - 产物 -需求规范
+- 通信规范分析 
+  - 现有网络体系分析，估计和测量通信量及设备利用率
+- 逻辑网络设计
+  - 选择符合需求的设计，确定网络的逻辑结构
+- 物理设计
+  - 将逻辑设计应用到物理空间
+- 实施阶段
+  - 实现物理设计、安装和维护
+
 
 
 
