--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -397,11 +397,35 @@ CMMI模型的5个成熟度级别分别为：
 
 详细设计：过程设计，通过结构细化，得到软件详细数据结构和算法e
 
+需求管理：包括变更控制、版本控制、需求跟踪、需求状态跟踪
+
+
+
+软件设计包括：
+
+1.  体系结构设计  定义软件系统各主要部件之间的关系
+2. 数据设计 将模型转换成数据结构的定义，好的数据设计将改善程序结构和模块划分
+3. 接口设计 软件内部、软件和操作系统之间，以及软件和人之间如何通信
+4. 过程设计 系统部件转换成软件的过程描述。
+
+内聚从高到底：
+
+- 功能内聚 
+- 顺序内聚
+- 通信内聚
+- 过程内聚
+- 瞬时内聚
+- 逻辑内聚
+
+
+
+
+
 ### 22  软件架构
 
 - 平台独立模型
 
-
+平台无关性是在不涉及实现的情况下对软件系统进行建模。
 
 ### 23 设计模式
 
@@ -783,15 +807,37 @@ SQL注入的主要防范措施：
 - 测试 检查个子系统之间的交互、集成、验证所有需求是否呗正确实现，对发现的软件质量上的缺陷进行归档，对软件质量提出改进建议
 - 部署 打包、分发、安装软件，升级旧系统；培训用户以及销售人员并提供技术支持
 - 配置与变更 跟踪并维护系统开发过程中所产生的所有制品的完整性和一致性
-- 项目管理
-- 环境
+- 项目管理 为软件开发项目提供计划、人员分配、执行、监控等方面的指导，为风险管理提供框架
+- 环境 为软件开发提供软件开发环境，即提供过程管理和工具支持
 
 4个阶段：
 
-- 初始阶段
-- 细化阶段
-- 构建阶段
-- 移交阶段
+- 初始阶段 定义最终产品视图和业务模型，并确定系统范围  . 里程碑:生命周期目标
+- 细化阶段 确定系统的体现结构，指定工作计划及资源要求,建立完善的架构   里程碑:生命周期架构
+- 构建阶段 构造产品并继续研究需求、体系结构、计划直至产品提交  里程碑:初始运作功能
+- 移交阶段 产品移交给用户使用   里程碑:产品发布
+
+核心概念：
+
+- ​	 角色： 描述某个人或者以小组的行为与职责
+- 活动  how  活动是一个有明确目标的独立工作单元
+- 制品 ： what 的问题   制品式活动生成，创建或者修改的一段信息、产品、工件等
+- 工作流 when 工作流描述了一个有意义的连续的活动序列，每个工作流产生一些有价值的产品
+
+特点：
+
+- 用例驱动
+
+- 以体系结构为中心 。 软件体系结构的设计和代码设计无关
+
+- 迭代与增量
+
+  强调采用迭代和增加方式开发软件
+
+### 33  ERP
+
+企业所有的资源包括三大流:物流\资金流\信息流
+
 
 
 ### ？31 架构风格
@@ -838,6 +884,10 @@ SQL注入的主要防范措施：
 1. 灵活性和可扩展性：由微内核的os的许多功能是由相对独立的服务器软件来实现的，当开发了新的硬件和软件时，微内核os只须在响应的服务器中增加新的功能，或者再增加一个专门的服务器。与此同时，也必然改善系统的灵活性，不仅仅在操作系统中增加新的功能，还可以修改原有的功能，以及删除过时的功能
 2. 增强了系统的可靠性和可移植性。由于微内核时处于精心设计和严格测试的，容易保证其正确性；另一方面它提供了规范而精简的应用程序接口，为微内核的程序编制提高代码创造了条件。此由于所有的服务器都是在用户态运行的
 3. 提供了分布式系统的支持
+
+
+
+分布式交互的环境:解决分布性问题最普通的体系结构模式是代理模式
 
 
 
@@ -1173,6 +1223,9 @@ IPSEC 是IP层安全传输层技术
    11. 信息系统开发方法
        1. 结构化方法：核心自定向下，逐步求精。特点是：开发目标清晰、开发工作阶段化、设计方法结构化
        2. 面向对象：客观世界都是建立在对象的基础之上，每一个对象都有自己的内部运动规律和内部状态，都属于某个对象类，复杂的对象可以由简单的对象构成。不同对象的相互组合配合形成了构成系统
+          - 对象模型用于描述系统数据结构 定义了做什么事情
+          - 动态模型用于描述系统控制结构  明确了什么时候做
+          - 功能模型用于描述系统功能 定义了应该做什么
        3. 面向服务：基于面向对象的基础上建立出来的，对于构件的功能采用接口的形势暴露出来，进一步将接口的定义与实现进行解耦产生的面向对象的服务。因为服务基础框架基于粗粒度、松耦合和基于标准的服务，这使得信息系统的建设能够保持主动。
        4. 原型化方法：原型方法称为快速原型方法，根据用户初步需求，利用开发工具，快速的建立一个系统模型给用户，再此基础上与用户进行交流，最终实现用户的信息系统快速开发的方法。原型的优点是：能够有效确认用户的需求，适用于需求不明确的系统开发。对于分析面难度大、技术层面不大的系统采用原型开发。
 
