--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -40,7 +40,7 @@
 
 
 
-
+接口设设计主要依据是数据流图，接口设计的任务主要是描述软件与外部环境之间的交互关系，软件内模块之间的调用关系，定义软件的主要结构元素及其之间的关系是架构设计阶段的任务，确定软件设计的文件系统的结构以及数据库表结构是数据存储阶段的任务；确定软件个模块内部算法和数据结构是详细设计阶段的任务。
 
 #### 数据流图在分层细化过程中遵循的数据平衡原则：
 
@@ -52,6 +52,8 @@
 
 
 #### 数据流图
+
+数据流图是一种图形化工具，用来说明业务处理过程，系统边界内所包含的功能和系统中的数据流
 
    - 分析阶段作用：建立系统的功能模型，从而完成需求分析
    - 设计阶段的作用：为模块划分与模块之间的接口设计提供依据
@@ -90,7 +92,15 @@
 
 ？ 补充其他几种数据流图
 
+### 耦合类型
 
+非直接耦合：两个模块之间没有直接关系，联系完全通过主调用模块的调用来实现
+
+数据耦合：一组模块借助参数表传递简单数据
+
+
+
+标记耦合：一组模块通过参数表传递记录信息。
 
 #### UML 
 
@@ -184,6 +194,14 @@ UML 中的事物：
 - 分组  模型组成部分 他们是一些模型的组成的盒子
 
 
+
+### 测试：
+
+白盒测试：主要按照测试程序的内部结构，单元测试。白盒测试方法主要有：控制流测试、数据流测试、和程序变异测试。
+
+控制流测试：是根据程序内部结构设计测试用例，常用的技术是逻辑覆盖。
+
+数据流测试：
 
 
 
