--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -392,11 +392,21 @@ display ip routing-table protocol ospf //查看OSPF路由条目
 
 
 
+配置
+
+network-entity 10.0000.0000.0001.00
 
 
 
+网络实体 
+
+10 区域
+
+systemid  0000.0000.0001  必须12个字符 用16进制
 
 
+
+isis L2 路由器就是  相当于OSPF的 骨干路由器
 
 
 
@@ -1651,3 +1661,11 @@ IPSec
 L2TP 扩展了点到点协议PPP的应用，是一种在远程办公场景中
 
 ## bgp+ 是ipv6的地址信息
+
+
+
+
+
+## 链路聚合
+
+基于流的负载分担
