--- a/笔记/前端.md
+++ b/笔记/前端.md
@@ -184,7 +184,11 @@ decodeURIComponent(param.split('=')[1].replace(/%20/g, '+')
 
 https://blog.csdn.net/a15297701931/article/details/125046778
 
+### 7.  vue 创建html
 
+```
+htmlContent: '<p><img src="../../static/home/zhanxidetail.png"></p>',
+```
 
 
 
