--- a/架构设计/方案设计.md
+++ b/架构设计/方案设计.md
@@ -68,7 +68,21 @@
 
 
 
+## 系统升级设计：
 
+### 1.升级前检测：
+
+1.检测系统资源是否支持系统升级，主要是内存，CPU资源，系统负载，以及
+
+
+
+### 2.升级后检查：
+
+ 2.1 系统自检，包括资源是否满足系统运行要求
+
+2.2 系统业务功能是否正常
+
+​	业务功能正常，通过检查关键接口，模块功能保证业务功能正常
 
 
 
