--- a/架构设计/方案设计.md
+++ b/架构设计/方案设计.md
@@ -64,11 +64,11 @@
 
 
 
-## 故障处理设计：
+## 6.故障处理设计：
 
 
 
-## 系统升级设计：
+## 7.系统升级设计：
 
 ### 1.升级前检测：
 
@@ -88,7 +88,7 @@
 
 
 
-
+## 8.系统运行状态监测：
 
 
 
