--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -1642,6 +1642,10 @@ mongo:
 
 
 
+企业信息管理：
+
+涉及对企业管理理念的创新，管理流程的优化，管理团队的重组和管理手段的革新。管理创新是按照市场发展的要求，对企业现有的管理流程进行整合，从作为管理核心的财务、物料管理，转向技术、物资、人力资源的管理，并延伸到企业技术创新、工艺设计、产品设计、生产制造过程的管理，进而还要扩展到客户关系管理、供应链管理乃至发展到电子商务。
+
 
 
 
