--- a/物联网/电子电路.md
+++ b/物联网/电子电路.md
@@ -2,6 +2,7 @@
 高通滤波： 可以通过高频波 低频的波不能通过 ，电容信号变化跟不上电流变化
 
 ## 电感
-流过电感的电流不能通电
-流过电感的电流不能突变
-电感不会改变电流的最大值
+- 流过电感的电流不能通电
+- 流过电感的电流不能突变
+- 电感不会改变电流的最大值
+- 电感的回路的电阻突然变的很大的时候，电感会产生一个很高的电压，容易击穿电器，应用电感时候必须要考虑电感的续流回路
