--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -612,7 +612,9 @@ CMMI模型的5个成熟度级别分别为：
 
 ### 基于软件架构 ABSD 
 
-q强调由商业、质量和功能需求的组合驱动软件架构设计。它强调采用视角和视图来描述软件架构，采用用例和质量场景来描述质量需求。
+强调由商业、质量和功能需求的组合驱动软件架构设计。它强调采用视角和视图来描述软件架构，采用用例和质量场景来描述质量需求。
+
+
 
 ### 体系结构权衡分析法：
 
