--- a/物联网/电子电路.md
+++ b/物联网/电子电路.md
@@ -8,4 +8,23 @@
 - 电感的回路的电阻突然变的很大的时候，电感会产生一个很高的电压，容易击穿电器，应用电感时候必须要考虑电感的续流回路
 -  高通滤波
 -  低通滤波
--  
+
+
+
+
+
+## 二极管
+
+### 稳压二极管
+
+1.  是工作在反向击穿状态，当发生反向击穿时，稳压二极管两端的电压会保持在某个电压值极管
+
+
+
+## 三极管
+
+NPN  结构类似背靠背的两个二极管组成
+
+
+
+PNP 结构类似面对面的两个二极管组成
